Code optimized. Some changes to API

--- a/src/examples/pc/Makefile
+++ b/src/examples/pc/Makefile
@@ -4,20 +4,19 @@
 #TARGET = all
 #TARGET = var
 #TARGET = play
-TARGET = stress
+#TARGET = stress
 #TARGET = long
 #TARGET = float
-#TARGET = style
+TARGET = style
 
+PORT = /dev/ttyUSB0
 TARGET_DIR = src
-STUBS_DIR = src
-LOOKER_MASTER_DIR = ../../looker_master
-LOOKER_SLAVE_DIR = ../../looker_slave
-LIBCRC_DIR = ../../crc8
 BIN_DIR = bin
+STUBS_DIR = src
+LOOKER_COMMON_DIR = ../../looker_common
+LOOKER_MASTER_DIR = ../../looker_master
 CFLAGS = -Wall -O2 -c -MMD -I$(shell pwd)/$(STUBS_DIR)
 LDFLAGS =
-PORT = /dev/ttyUSB0
 VERBOSE = 1
 ifeq ($(VERBOSE), 1)
 	ECHO =
@@ -25,7 +24,7 @@ else
     ECHO = @
 endif
 
-OBJ = $(BIN_DIR)/$(TARGET).o $(BIN_DIR)/looker_master.o $(BIN_DIR)/looker_stubs.o $(BIN_DIR)/crc8.o
+OBJ = $(BIN_DIR)/$(TARGET).o $(BIN_DIR)/looker_master.o $(BIN_DIR)/looker_stubs.o $(BIN_DIR)/crc8.o $(BIN_DIR)/msg.o
 
 .PHONY: all run clean debug
 
@@ -46,7 +45,10 @@ $(BIN_DIR)/looker_master.o: $(LOOKER_MASTER_DIR)/looker_master.c
 $(BIN_DIR)/looker_stubs.o: $(STUBS_DIR)/looker_stubs.c
 	$(ECHO) gcc $(CFLAGS) -o $@ $<
 
-$(BIN_DIR)/crc8.o: $(LIBCRC_DIR)/crc8.c
+$(BIN_DIR)/crc8.o: $(LOOKER_COMMON_DIR)/crc8.c
+	$(ECHO) gcc $(CFLAGS) -o $@ $<
+
+$(BIN_DIR)/msg.o: $(LOOKER_COMMON_DIR)/msg.c
 	$(ECHO) gcc $(CFLAGS) -o $@ $<
 
 run: $(BIN_DIR) $(BIN_DIR)/$(TARGET)
